<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
    	android:orientation="horizontal" >
    	
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="55">

	        <TextView
	            android:id="@+id/textViewNome"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginTop="10dp"
	            android:background="@color/italsimegreenahcg_color"
	            android:padding="10dp"
	            android:text="@string/dummy_model_name"
	            android:textColor="@android:color/white"
	            android:textSize="18sp" />
	
	        <TextView
	            android:id="@+id/textViewKwString"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="10dp"
	            android:layout_below="@+id/textViewNome"
	            android:layout_marginTop="10dp"
	            android:text="@string/kw_string" />
	        
	        <TextView
	            android:id="@+id/textViewRpmString"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="10dp"
	            android:layout_below="@+id/textViewKwString"
	            android:layout_marginTop="5dp"
	            android:text="@string/rpm_string" />
	        
	        <TextView
	            android:id="@+id/textViewKgString"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="10dp"
	            android:layout_below="@+id/textViewRpmString"
	            android:layout_marginTop="5dp"
	            android:text="@string/kg_string" />
	
	        <TextView
	            android:id="@+id/TextViewKwValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/textViewKwString"
	            android:layout_alignBaseline="@+id/textViewKwString"
	            android:layout_marginLeft="20dp"
	            android:text="@string/dummy_no_value" />
	
	        <TextView
	            android:id="@+id/TextViewRpmValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textViewRpmString"
	            android:layout_alignBottom="@+id/textViewRpmString"
	            android:layout_alignLeft="@+id/TextViewKwValue"
	            android:text="@string/dummy_no_value" />
	        
	        <TextView
	            android:id="@+id/TextViewKgValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textViewKgString"
	            android:layout_alignBottom="@+id/textViewKgString"
	            android:layout_alignLeft="@+id/TextViewKwValue"
	            android:text="@string/dummy_no_value" />
        
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageViewAriaType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/imagedescriptor_imageariatype" />
        
    </LinearLayout>



        <TableLayout
            android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="20" 
            android:paddingTop="20dp"
            android:layout_margin="10dp">

            <TableRow
                android:id="@+id/tableRowm3h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/TextView11" android:text="@string/m3h_table_string"
                    android:layout_weight="2"  android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewm3h1" android:text="12"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewm3h2" android:text="13"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewm3h3" android:text="14"
                    android:layout_weight="1"  android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewm3h4" android:text="15"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                 <TextView
                    android:id="@+id/TextViewm3h5" android:text="16"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowmmH2O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 
                <TextView
                    android:id="@+id/TextView21" android:text="@string/mmH2O_table_string"
                    android:layout_weight="2"  android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewmmH2O1" android:text="22"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewmmH2O2" android:text="23"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewmmH2O3" android:text="24"
                    android:layout_weight="1"  android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                <TextView
                    android:id="@+id/TextViewmmH2O4" android:text="25"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
                 <TextView
                    android:id="@+id/TextViewmmH2O5" android:text="26"
                    android:layout_weight="1" android:gravity="center"
                    android:textSize="12sp" android:padding="5dp"
                    android:background="@drawable/background_table_item"/>
            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50" >

            <ImageView
                android:id="@+id/imageViewDimensioni"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/dimensioni_image" />
        </RelativeLayout>

</LinearLayout>
